ir/tests/snapshots/grammar_json_snapshots__grammar_after_normalization.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "normalize_demo",
  "rules": {
    "1001": [
      {
        "lhs": 1001,
        "rhs": [
          {
            "NonTerminal": 1001
          },
          {
            "Terminal": 3
          },
          {
            "Terminal": 2
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      },
      {
        "lhs": 1001,
        "rhs": [
          "Epsilon"
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      }
    ],
    "1": [
      {
        "lhs": 1,
        "rhs": [
          {
            "Terminal": 2
          },
          {
            "NonTerminal": 1001
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [],
        "production_id": 0
      }
    ]
  },
  "tokens": {
    "2": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+"
      },
      "fragile": false
    },
    "3": {
      "name": "+",
      "pattern": {
        "String": "+"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {},
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "1": "expr"
  },
  "symbol_registry": null
}
