ir/tests/snapshots/grammar_json_snapshots__grammar_with_field_mappings.snap
---
source: ir/tests/grammar_json_snapshots.rs
expression: grammar_json(&grammar)
---
{
  "name": "field_demo",
  "rules": {
    "3": [
      {
        "lhs": 3,
        "rhs": [
          {
            "Terminal": 1
          },
          {
            "Terminal": 2
          },
          {
            "Terminal": 1
          }
        ],
        "precedence": null,
        "associativity": null,
        "fields": [
          [
            0,
            0
          ],
          [
            1,
            1
          ],
          [
            2,
            2
          ]
        ],
        "production_id": 0
      }
    ]
  },
  "tokens": {
    "1": {
      "name": "NUMBER",
      "pattern": {
        "Regex": "\\d+"
      },
      "fragile": false
    },
    "2": {
      "name": "+",
      "pattern": {
        "String": "+"
      },
      "fragile": false
    }
  },
  "precedences": [],
  "conflicts": [],
  "externals": [],
  "extras": [],
  "fields": {
    "0": "left",
    "1": "operator",
    "2": "right"
  },
  "supertypes": [],
  "inline_rules": [],
  "alias_sequences": {},
  "production_ids": {},
  "max_alias_sequence_length": 0,
  "rule_names": {
    "3": "binary_expr"
  },
  "symbol_registry": null
}
